syntax = "proto3";

option java_package = "com.example";

message PokemonMessage {
  int32 id = 1;
  int32 height = 2;
  int32 weight = 3;
  int32 base_experience = 4;
  string name = 5;
  string image = 6;
}

message PokemonResponseMessage {
  int32 id = 1;
  int32 height = 2;
  int32 weight = 3;
  int32 base_experience = 4;
  string name = 5;
  string image = 6;
  string payload = 7;
  string time = 8;
}

service KotlinService {
  rpc sendMessage(PokemonMessage) returns (stream PokemonResponseMessage);
}



